--- a/tudo.html
+++ b/tudo.html
@@ -3,16 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>    <link rel="stylesheet"  type="text/css" href ="tudo.css.css">
+    <link rel="stylesheet"  type="text/css" href ="tudo.css.css">
+    <title>Document</title>
 
 </head>
 <body>
     <div class="parent-container">
         <div class="content">
-        <h2 class="greetings">GOOD MORNING</h2>
-        <span class="name">AYOMIDE</span>
-        <button class="add-task">Add-task</button>
-        <button class="View-task">View-task</button>
+            <span class="time">00:00:00</span>
+            <h2 class="greetings">GOOD MORNING</h2>
+            <span class="name">AYOMIDE</span>
+            <button class="add-task">Add-task</button>
+            <button class="View-task">View-task</button>
         </div>
 
 </div>
